Confg and clean code eslint standard, confg prettier, refactored controllers, CRUD menu endpoint ok
