# src/models/menu.model.ts
@@ -1,19 +1,21 @@
-import { model, Schema, Document } from 'mongoose';
+import { model, Schema, Document } from 'mongoose'
+import uniqueValidator from 'mongoose-unique-validator'
 
 export interface IMenu extends Document {
-  title: string,
-  path: string,
-  order: number,
-  active: boolean,
+  title: string
+  path: string
+  order: number
+  active: boolean
 }
 
 const menuSchema = new Schema<IMenu>(
   {
-    title: {type: String, required: true},
-    path: {type: String, required: true},
-    order: {type: Number, required: true},
-    active: {type: Boolean, required: true},
+    title: { type: String, trim: true, minlength: 1, required: true, unique: true },
+    path: { type: String, trim: true, minlength: 1, lowercase: true, required: true, unique: true, uniqueCaseInsensitive: true },
+    order: { type: Number, required: true, unique: true },
+    active: { type: Boolean, required: true }
   }
 )
+menuSchema.plugin(uniqueValidator)
 
-export default model<IMenu>('Model', menuSchema);
+export default model<IMenu>('Menu', menuSchema)
