# src/schemas/auth.schema.ts
@@ -1,25 +1,25 @@
-import { z } from "zod";
+import { z } from 'zod'
 
 export const RegisterAuthSchema = z.object({
   body: z.object({
-    firstname: z.string().trim().min(3),
-    lastname: z.string().trim().min(3),
-    email: z.string().min(1, 'must have content').trim().email(),
-    password: z.string().min(6),
-  }),
-});
+    firstname: z.string().trim().min(3).regex(/^[a-z0-9]+$/i, 'Contains spaces or invalid characters'),
+    lastname: z.string().trim().min(3).regex(/^[a-z0-9]+$/i, 'Contains spaces or invalid characters'),
+    email: z.string().min(1, 'must have content').trim().email().transform(val => val.toLowerCase()),
+    password: z.string().regex(/^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.{6,})/, 'Password must be 6 characters or longer and must contain at least: 1 number, 1 lowercase character, 1 uppercase character')
+  })
+})
 
 export const LoginAuthSchema = z.object({
   body: z.object({
-    email: z.string().min(1, 'must have content').trim().email(),
-    password: z.string().min(6),
-  }),
+    email: z.string().min(1, 'must have content').trim().email().transform(val => val.toLowerCase()),
+    password: z.string().regex(/^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.{6,})/, 'Password must be 6 characters or longer and must contain at least: 1 number, 1 lowercase character, 1 uppercase character')
+  })
 })
 
 export const RefreshAuthSchema = z.object({
   body: z.object({
-    refreshToken: z.string().min(1, 'must have content')
-  }),
+    refreshToken: z.string().min(1, 'Must have content')
+  })
 })
 
 export type RegisterBodyAuthType = z.infer<typeof RegisterAuthSchema>['body']
